# wellness-partners

./: .env.example  FEATURE_6_SUMMARY.md  POSTGRESQL_MIGRATION_GUIDE.md  STRIPE_SETUP.md  WELLNESS_COUNCIL.md  hello.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/design-guide/: SKILL.md
.claude/skills/launch-planner/: SKILL.md
.claude/skills/marketing-writer/: SKILL.md
.claude/skills/roadmap-builder/: SKILL.md
.claude/skills/ultra-think/: SKILL.md
backend/: auth.py  config.py  council.py  create_tables.py  database.py  db_storage.py  main.py  migrate_json_to_db.py  requirements.txt  storage.py  stripe_integration.py  test_connection.py
docs/: Authentication_Implementation_Summary.md  DATABASE_MIGRATION.md  IMPLEMENTATION_STATUS.md  SUPABASE_SETUP.md  WEBHOOK_SETUP.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: AccountCreation.css  AccountCreation.jsx  ChatInterface.jsx  CrisisResources.css  CrisisResources.jsx  MedicalDisclaimer.css  MedicalDisclaimer.jsx  OnboardingPage.css  OnboardingPage.jsx  OnboardingQuestions.css  OnboardingQuestions.jsx  PaymentSuccess.css  PaymentSuccess.jsx  Paywall.css  Paywall.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage3.jsx
